cubesat/log.txt
Traceback (most recent call last):
  File "/home/raspberrypi/cubesat-2025/cubesat/control_loop.py", line 2, in <module>
    import communications
  File "/home/raspberrypi/cubesat-2025/cubesat/communications.py", line 30
    print("Running BTD")rssi_value = BlueToothDiscover.find_device_rssi(ground_station_address)
                        ^^^^^^^^^^
SyntaxError: invalid syntax
